# Arreglos-y-Matrices

./: .gitignore  Arreglos.cpp  Arreglos.h  Arreglos.md  CMakeLists.txt  Main.cpp  Matrices.cpp  Matrices.h  Matrices.md  NumberUtils.h  README.md  arreglos.go  matriz.go
Gary/: Array.md  Matriz.md  README.md
Gary/Py/: README.md  ejerciciosarray.py  ejerciciosmatriz.py
Gary/Ts/: README.md  index.ts  package.json  tsconfig.json  utils.ts
Kevin/: README.md
Kevin/C++/: Arreglos.cpp  Arreglos.h  Main.cpp  Matrices.h  README.md
Kevin/Go/: Main.go  README.md  arreglos.go  go.mod  matriz.go
